corrigiendo el codigo segun el analisis de sonarqube