@@ -1,4 +1,4 @@
-package com.club.control.serviceImpl;
+package com.club.control.serviceimpl;
 
 import java.awt.Color;
 import java.io.ByteArrayOutputStream;
@@ -6,7 +6,6 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -41,6 +40,7 @@ import com.lowagie.text.pdf.PdfWriter;
 public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 
 	private static final Logger logger = LoggerFactory.getLogger(ClienteBungalowServiceImpl.class);
+	private static final String DATE_FORMAT_PATTERN = "yyyy-MM-dd";
 
 	private final ClienteBungalowRepository clienteBungalowRepository;
 	private final ClienteRepository clienteRepository;
@@ -61,7 +61,7 @@ public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 
 		List<ClienteBungalowEntity> list = clienteBungalowRepository.findAll();
 		logger.info("Listado del Servicios de Bungalows OK !");
-		return list.stream().map(ClienteBungalowMapper::toDto).collect(Collectors.toList());
+		return list.stream().map(ClienteBungalowMapper::toDto).toList();
 	}
 
 	@Override
@@ -161,7 +161,7 @@ public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 		entity.setMetodoPago(metodo);
 
 		ClienteBungalowEntity updated = clienteBungalowRepository.save(entity);
-		logger.info("Servicio de bungalow actualizado: " + updated);
+		logger.info("Servicio de bungalow actualizado: {}", updated);
 		return ClienteBungalowMapper.toDto(updated);
 	}
 
@@ -333,7 +333,7 @@ public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 			document.add(new Paragraph("Mz L3 Lt35 Los Alamos", infoFont));
 			document.add(new Paragraph("CHACLACAYO - LIMA", infoFont));
 			document.add(new Paragraph(
-					"Fecha: " + LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd")), infoFont));
+					"Fecha: " + LocalDate.now().format(DateTimeFormatter.ofPattern(DATE_FORMAT_PATTERN)), infoFont));
 			document.add(Chunk.NEWLINE);
 
 			// Tabla con columnas personalizadas
@@ -392,7 +392,8 @@ public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 			document.add(Chunk.NEWLINE);
 			document.close();
 		} catch (Exception e) {
-			e.printStackTrace();
+			logger.error("Ocurrió un error al generar el PDF de reporte de servicios de bungalows", e);
+			throw new IllegalArgumentException("Ocurrió un error al generar el PDF de reporte de servicios de bungalows");
 		}
 		
 		logger.info("PDF generado Exitosamente !");
@@ -458,7 +459,7 @@ public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 			document.add(new Paragraph("RUC: 4250125244", infoFont));
 			document.add(new Paragraph("Mz L3 Lt35 Los Alamos", infoFont));
 			document.add(new Paragraph("CHACLACAYO - LIMA", infoFont));
-			document.add(new Paragraph("Fecha del reporte: " + LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd")),
+			document.add(new Paragraph("Fecha del reporte: " + LocalDate.now().format(DateTimeFormatter.ofPattern(DATE_FORMAT_PATTERN)),
 					infoFont));
 			document.add(Chunk.NEWLINE);
 
@@ -517,8 +518,8 @@ public class ClienteBungalowServiceImpl implements ClienteBungalowService {
 			document.close();
 			
 		} catch (Exception e) {
-			e.printStackTrace();
-			throw new IllegalArgumentException("Hubo un error al generar el PDF");
+			logger.error("Ocurrió un error al generar el PDF de reporte del servicio de bungalow", e);
+			throw new IllegalArgumentException("Ocurrió un error al generar el PDF de reporte del servicio de bungalow");
 		}
 		logger.info("PDF generado Exitosamente del servicio de bungalow con el id: {}", id);
 		return baos.toByteArray();
